--- a/GoodSite/people/templates/people/about.html
+++ b/GoodSite/people/templates/people/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body style="text-align:center;">
-    <h1> БГИТУ </h1>
+<body>
+    <h1 style="text-align:center;"> БГИТУ </h1>
+<p><a href="{% url 'spisok_pri' 11%}"> К ЛЮДЯМ </a></p>
 </body>
 </html>
