Add new html files, finished split_line, menu, students' links, func and class_obj output and demonstration of 20 built-ins filters

--- a/GoodSite/people/templates/people/Split_line Tester.html
+++ b/GoodSite/people/templates/people/Split_line Tester.html
@@ -2,9 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Split_line Tester</title>
+    <title> Функция Split_line </title>
 </head>
-<body>
+<body style="font-size:18px;">
+    <p style="text-align: center"> <a href="{% url 'home' %}"> Главная</a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="{% url 'about' %}"> О нас</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="{% url 'pri_group' %}"> Группа ПрИ-201</a></p> <br><br><br>
+
     <h1>{{ empty }}</h1>
     <h3>{{ first_str }} </h3>
     <p>{{ second_str }} </p>
