--- a/GoodSite/people/templates/people/index.html
+++ b/GoodSite/people/templates/people/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Title</title>
+    <title>Главная</title>
 </head>
 <body style="font-size:18px;">
-<p>Страница для <span style="color:orange;font-size:27px;">Людей</span> <br>
-    <p><a href="{% url 'about' %}"> БГИТУ </a></p>
+    <p style="text-align: center"> <a href="{% url 'home' %}"> Главная</a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="{% url 'about' %}"> О нас</a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="{% url 'pri_group' %}"> Группа ПрИ-201</a></p> <br><br><br>
+
+    <p>Страница для <span style="color:orange;font-size:27px;">Людей</span>
+
 
 
 <!--    <br>-->
