--- a/GoodSite/people/templates/people/pri_group.html
+++ b/GoodSite/people/templates/people/pri_group.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> Группа ПрИ-201 </title>
 </head>
-<body>
+<body style="font-size:18px;">
+    <p style="text-align: center"> <a href="{% url 'home' %}"> Главная</a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="{% url 'about' %}"> О нас</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="{% url 'pri_group' %}"> Группа ПрИ-201</a></p> <br><br><br>
 
+    <p>
+        1.&nbsp&nbsp  <a href="{% url 'spisok_pri' 1 %}" style="text-decoration: none">Абрамов Александр Альбертович&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.034 <br>
+        2.&nbsp&nbsp  <a href="{% url 'spisok_pri' 2 %}" style="text-decoration: none">Близнюк Илья Сергеевич&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.035 <br>
+        3.&nbsp&nbsp  <a href="{% url 'spisok_pri' 3 %}" style="text-decoration: none">Зверев Андрей Александрович&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.036 <br>
+        4.&nbsp&nbsp  <a href="{% url 'spisok_pri' 4 %}" style="text-decoration: none">Карагузин Максим Игоревич&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.037 <br>
+        5.&nbsp&nbsp  <a href="{% url 'spisok_pri' 5 %}" style="text-decoration: none">Круглик Евгений Дмитриевич&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.038 <br>
+        6.&nbsp&nbsp  <a href="{% url 'spisok_pri' 6 %}" style="text-decoration: none">Лысков Влас Евгеньевич&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.039 <br>
+        7.&nbsp&nbsp  <a href="{% url 'spisok_pri' 7 %}" style="text-decoration: none">Маклюсов Роман Романович&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 21-2.010 <br>
+        8.&nbsp&nbsp  <a href="{% url 'spisok_pri' 8 %}" style="text-decoration: none">Манешин Антон Сергеевич&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.040 <br>
+        9.&nbsp&nbsp  <a href="{% url 'spisok_pri' 9 %}" style="text-decoration: none">Петрачков Александр Викторович&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.041 <br>
+        10.           <a href="{% url 'spisok_pri' 10 %}" style="text-decoration: none">Сафонов Глеб Александрович&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.045<br>
+        11.           <a href="{% url 'spisok_pri' 11 %}" style="text-decoration: none">Терешин Роман Павлович🎶(❁´◡`❁)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>  22-2.042<br>
+        12.           <a href="{% url 'spisok_pri' 12 %}" style="text-decoration: none">Чертков Федор Андреевич&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a> 22-2.043
+    </p>
 </body>
 </html>
