--- a/GoodSite/people/templates/people/index.html
+++ b/GoodSite/people/templates/people/index.html
@@ -12,7 +12,7 @@
 
     <p>Страница для <span style="color:orange;font-size:27px;">Людей</span>
 
-
+<!--    'women/includes/nav.html'-->
 
 <!--    <br>-->
 <!--    {{menu}}-->
